# dm-test

./: .editorconfig  .env.example  .gitignore  Cargo.toml  README.md  test-report.html
.cargo/: config.toml
examples/: demo.rs  parse_test_chunks.rs  run_bigint.rs
src/: cli.rs  codegen.rs  column.rs  config.rs  database.rs  error.rs  lib.rs  main.rs  report.rs  report_template.html  sqllogic.rs  tests.rs
tests/datatype/: binary_tests.slt  bit_tests.slt  character_tests.slt  datetime_tests.slt  json_tests.slt  numeric_tests.slt
tests/datatype/bfile/: bfile_basic.test  bfile_null.test
tests/datatype/bigint/: 01_bigint_basic.test  02_bigint_arithmetic.test  03_bigint_aggregate.test  04_bigint_null.test  05_bigint_comparison.test  06_bigint_ordering.test
tests/datatype/bit/: 01_bit_basic.test  02_bit_operations.test  03_bit_null.test  04_bit_default.test
tests/datatype/blob/: blob_basic.test  blob_binary_data.test  blob_large_data.test  blob_null.test  blob_operations.test  blob_update.test
tests/datatype/char/: 01_char_basic.test  02_char_length_variations.test  03_char_padding.test  04_char_null_handling.test  05_char_default_values.test  06_char_comparison.test  07_char_ordering.test  08_char_update.test  09_char_delete.test  10_char_constraints.test  11_char_index.test  12_char_join.test  13_char_aggregate.test
tests/datatype/character/: 01_character_basic.test  02_character_padding.test  03_character_constraints.test  04_character_aggregate.test
tests/datatype/clob/: clob_basic.test  clob_large_data.test  clob_null.test  clob_operations.test
(+479 files in other folders)
